# Aerochord

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  run.sh
.context/: cap3_computacao_e_musica.md  cap5_proposta_aerochord.md  cap6_consideracoes_e_plano.md  plano_implementacao.md
cmake/: FetchDependencies.cmake
src/: main.cpp
src/capture/: CMakeLists.txt  CaptureModule.cpp  CaptureModule.h
src/common/: CMakeLists.txt  LockFreeQueue.h  Logger.cpp  Logger.h  PipelineTypes.h  ThreadUtils.h
src/gesture_analysis/: CMakeLists.txt  GestureAnalysisModule.cpp  GestureAnalysisModule.h
src/mapping/: CMakeLists.txt  MappingModule.cpp  MappingModule.h
src/midi_generation/: CMakeLists.txt  MidiGenerationModule.cpp  MidiGenerationModule.h
src/pose_detection/: CMakeLists.txt  PoseDetectionModule.cpp  PoseDetectionModule.h
src/visualization/: CMakeLists.txt  VisualizationModule.cpp  VisualizationModule.h
tests/: CMakeLists.txt  test_gesture_analysis.cpp  test_lock_free_queue.cpp  test_mapping.cpp  test_pipeline_latency.cpp
tools/: analyze_eval.py
